laborations/lab2/testsuite/good/core106.cc
int main () {
  int x, j, i;
  j = i = 6;
  printInt(i+j);
  return 0;
}
//void printInt(int x) { }
